@@ -1,4 +1,4 @@
-<!-- start of $Id: html_mail.php,v 1.7 2007/12/19 21:06:19 gerundt Exp $ -->
+<!-- start of $Id: html_mail.php,v 1.8 2008/09/05 22:39:02 gerundt Exp $ -->
 <div class="mailNav">
    <table>
 <?php
@@ -27,8 +27,7 @@ if (($content['next'] != '') && ($content['next'] != 0))
   echo '<a href="' . $_SERVER['PHP_SELF'] . '?action=aff_mail&amp;mail=' . $content['next'] . '&amp;verbose=' . $verbose . '" rel="next"><img src="themes/' . $_SESSION['nocc_theme'] . '/img/right_arrow.png" alt="' . $alt_next . '" title="' . $title_next_msg . '" class="navigation" /></a>';
 echo "</td></tr>";
 
-// If not displaying verbose headers, display normal headers
-if ($conf->use_verbose && $verbose == '0') {
+if ($conf->use_verbose && $verbose == '0') { //If displaying "normal" headers...
   echo '<tr><th class="mailHeaderLabel">'.$html_from.':</th><td class="mailHeaderData">'.htmlspecialchars($content['from']).'</td></tr>';
   echo '<tr><th class="mailHeaderLabel">'.$html_to.':</th><td class="mailHeaderData">'.htmlspecialchars($content['to']).'</td></tr>';
   if ($content['cc'] != '') {
@@ -59,6 +58,11 @@ if ($content['subject'] == '')
   echo '</div></form>';
   echo '</td></tr>';
 }
+else { //If displaying "verbose" headers...
+  if($content['att'] != '') {
+    echo $content['att'];
+  }
+}
 
 if ($has_images && $display_images != 1) {
   echo('<tr>');
@@ -76,16 +80,7 @@ if ($has_images && $display_images != 1) {
 </div>
 <div class="mailData">
 <?php
-
-global $conf;
-
-// If not displaying verbose headers, display normal headers
-if (!($conf->use_verbose && $verbose == '0')) {
-  if($content['att'] != '') {
-    echo '<table>';
-    echo $content['att'];
-    echo '</table>';
-  }
+if (!($conf->use_verbose && $verbose == '0')) { //If displaying "verbose" headers...
   echo '<div class="mail"><pre>'.htmlspecialchars($content['header']).'</pre></div>';
 }
 
@@ -93,4 +88,4 @@ echo '<div class="mail">'.$content['body'].'</div>';
 
 ?>
 </div>
-<!-- end of $Id: html_mail.php,v 1.7 2007/12/19 21:06:19 gerundt Exp $ -->
+<!-- end of $Id: html_mail.php,v 1.8 2008/09/05 22:39:02 gerundt Exp $ -->
